2008-04-29  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: fix comment, thanks to 'ludovic'
	for the catch. Closes #193.

	* buildbot/changes/bonsaipoller.py: apply fixes from Ben Hearsum,
	closes #216.
	* buildbot/test/test_bonsaipoller.py: same

	* buildbot/status/mail.py (MailNotifier): add mode="passing",
	thanks to 'matisse' for the patch, closes #169.

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): add
	useChangeTime= argument, from Ben Hearsum, closes #213.

	* buildbot/changes/svnpoller.py (SVNPoller.checksvn): fix missing
	argument, thanks to 'thatch' for the catch.

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): fix scope
	of logEncoding, patch by Ben Hearsum. Closes #214.

	* docs/buildbot.texinfo (IRC Bot): fix typo, patch by Christian
	Theune. Closes #231.

2008-04-24  Brian Warner  <warner@lothar.com>

	* setup.py (setup_args): apply patches from zooko: prepare
	setup.py for optional setuptoolsification
	(entry_points): zooko's other patches: if setuptools is available,
	create an executable via 'entry_points', and declare a dependency
	upon twisted

	* bin/buildbot: apply patch from zooko: use /usr/bin/env in shbang

	* README (REQUIREMENTS): we handle twisted-8.0.1 just fine.

2008-04-15  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): bump to 0.7.7+ while between
	releases
	* docs/buildbot.texinfo: same

2008-03-29  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): Releasing buildbot-0.7.7
	* docs/buildbot.texinfo: same

2008-03-29  Brian Warner  <warner@lothar.com>

	* NEWS: update with all changes since the last release. I left the
	bugs-fixed section somewhat terse, but there's a link to the Trac
	page with more details.
	* CREDITS: update

	* buildbot/status/web/waterfall.py (WaterfallStatusResource):
	accept category= arguments in the query-arg portion of the URL.
	These behave like the builder= queryargs: if any category=